Fix drag hint collapsing to a single point
Summary:
When using an orderer, if the height was set to "Automatic", the outline
for an item would collapse to a point.

This commit causes it to be the same size as when the height is set to
"Normal".

Test Plan:
* load test.html
* add an orderer
* set the height to "Automatic"
* make sure the outline in the landing area does not shrink to a point

Reviewers: alex

Reviewed By: alex

CC: alpert

Differential Revision: http://phabricator.khanacademy.org/D5836

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -376,6 +376,11 @@
         padding: 0;
     }
 
+    &.height-auto.layout-horizontal .drag-hint {
+        min-height: 65px;
+        min-width: 22px;
+    }
+
     .card-wrap {
         z-index: 0;
         position: relative;
